Fix input file button layout on mobile

--- a/components/search-bar.module.css
+++ b/components/search-bar.module.css
@@ -155,6 +155,7 @@
   opacity: 0;
   overflow: hidden;
   cursor: pointer;
+  width: 2rem;
 }
 .cutBordersBtn {
   white-space: pre;
